--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "nodemon": "^2.0.20",
     "three": "^0.145.0",
     "vite": "^3.1.8"
   }
